:sparkles: 마지막 질문 제공