@@ -2,6 +2,7 @@ package com.easybusan.dto;
 
 import com.easybusan.repository.model.Answer;
 import com.easybusan.repository.model.Question;
+import com.easybusan.repository.model.SectionCategory;
 import lombok.Builder;
 import lombok.Data;
 
@@ -19,6 +20,7 @@ public class UserKindTestDTO {
         private List<AnswerDTO.ResponseDTO> answerList;
         private boolean newTest;
         private boolean last;
+        private List<SectionCategoryDTO.ResponseDTO> sectionCategoryList;
 
         public static ResponseDTO of(Question question, List<Answer> answerList) {
             return ResponseDTO.builder()
@@ -28,9 +30,18 @@ public class UserKindTestDTO {
                     .last(false)
                     .answerList(answerList.stream()
                             .map(AnswerDTO.ResponseDTO::new)
-                            .collect(Collectors.toList()))
+                            .toList())
                     .build();
         }
 
+        public static ResponseDTO of(List<SectionCategory> sectionCategoryList) {
+            return ResponseDTO.builder()
+                    .sectionCategoryList(sectionCategoryList.stream()
+                            .map(SectionCategoryDTO.ResponseDTO::new)
+                            .toList())
+                    .newTest(true)
+                    .last(true)
+                    .build();
+        }
     }
 }
